--- a/action.yml
+++ b/action.yml
@@ -9,28 +9,33 @@ inputs:
     description: Commands to execute
     required: true
     type: string
+  options:
+    description: Additional docker arguments
+    required: false
 branding:
   icon: play
   color: orange
 runs:
   using: composite
   steps:
-    - name: Setup Playwright script
-      shell: bash
-      run: |
-        mkdir -p .playwright
-        echo "#!/usr/bin/env bash" > .playwright/run.sh
-        echo "set -euo pipefail" >> .playwright/run.sh
-        echo "${{ inputs.run }}" >> .playwright/run.sh
-        chmod +x .playwright/run.sh
-
     - name: Run Playwright
       shell: bash
       run: |
-        set -eux
+        set -euo pipefail
+
+        mkdir -p .run-playwright
+        echo "#!/usr/bin/env bash" > .run-playwright/run.sh
+        echo "set -euo pipefail" >> .run-playwright/run.sh
+        echo '${{ inputs.run }}' >> .run-playwright/run.sh
+        chmod +x .run-playwright/run.sh
+
+        ENV="$(echo '${{ toJson(env) }}' | jq -r 'keys | map("-e \(.)") | join(" ")')"
+
+        set -x
         docker run --rm \
-        -e CI=true \
-        --workdir /github/workspace \
-        -v "${{ github.workspace }}":/github/workspace \
-        mcr.microsoft.com/playwright:${{ inputs.version }} \
-        .playwright/run.sh
+          --workdir /github/workspace \
+          -v "${{ github.workspace }}":/github/workspace \
+          -e CI=true ${ENV} \
+          ${{ inputs.options }} \
+          mcr.microsoft.com/playwright:${{ inputs.version }} \
+          .run-playwright/run.sh
