--- a/renovate.json
+++ b/renovate.json
@@ -9,7 +9,7 @@
   "customManagers": [
     {
       "customType": "regex",
-      "fileMatch": ["^action\\.yml$"],
+      "managerFilePatterns": ["action.yml"],
       "matchStrings": [
         "default: (?<currentValue>[^@\\s]+)(@(?<currentDigest>[^\\s]+))?"
       ],
